# valuation

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  dcf_model_annual.csv  dcf_sensitivity_analysis.csv  dcf_valuation_summary.csv  environment.yml  mercor-dominicks-valuation.code-workspace  pyproject.toml  valuation.code-workspace
.github/: copilot-instructions.md
acquisition_analysis/: __init__.py  dataset.py
acquisition_analysis/modeling/: train.py
analysis/: dcf_model_annual.csv  dcf_sensitivity_analysis.csv  dcf_valuation_summary.csv
devops/: __init__.py  conda_clean.sh  conda_export.sh  conda_reinstall.sh  conda_to_pip.sh  mode_data.py  raw_datagen.py  rebuild_env.sh
docs/: polars_parquet_kwargs.py
entities/datasets/: dataset_ingest_sales_ingestion.json
notebooks/: 01_dataset.ipynb  01_prep.ipynb  dataset.ipynb  valuation.ipynb  valuation_g.ipynb
notebooks/lab/: 01_prep.ipynb  Base Financials.md  analytics.ipynb  analyze_data_anomalies.ipynb  data_analysis.ipynb  dataclass_nested_pretty_print.ipynb  dataset_store.ipynb  feature_engineering.ipynb  forecast.ipynb  missing_store_column.ipynb  model_arima.ipynb  model_lightgbm.ipynb  model_selection.ipynb  valuation.ipynb  valuation_c.txt  valuation_g.txt  verify_dask_install.ipynb
notes/: data_organization.md  dataset.md  dataset_size_guidelines.md  eda.md  journal.md  modeling.md  todo.md
reference/: Dominicks Financials from 1997 10-K.xlsx  Preprocessed Dataset Inventory.xlsx  ccount_codebook.csv  financials.yaml  week_decode_table.csv
references/: Dominicks Financials from 1997 10-K.xlsx  Week Decode Table.csv  week_decode_table.csv
tests/: __init__.py  conftest.py
tests/test_analysis/: test_company.py
tests/test_assets/: test_dataset.py  test_validation.py
tests/test_dataset/: test_category.py  test_company.py  test_store.py
tests/test_io/: test_csv.py  test_csv_simple.py  test_parquet.py
valuation/: __init__.py  __main__.py  config.py  dataset.py  features.py  forecast.py  forecast2.py  plots.py  repo.py  valuation.py
valuation/analysis/: analysis.py  base.py  company.py  financials.py  valuation.py
valuation/app/: state.py  task.py
valuation/asset/: artifact.py  base.py  dataset.py  identity.py  stage.py  store.py  types.py
valuation/config/: analysis.py  data.py  data_prep.py  filepaths.py  loggers.py  reader.py
valuation/core/: __init__.py  dataclass.py  dataset.py  entity.py  file.py  stage.py  state.py  structure.py  types.py  validation.py
valuation/dataprep/: aggregate.py  base.py  clean.py  engine.py  ingest.py  ingest2.py  pipeline.py  profile.py  split.py
valuation/dataset/: base.py  category.py  company.py  config.py  financials.py  kpi.py  profile.py  profile2.py  sales.py  split.py  store.py
valuation/flow/: __init__.py  validation.py
valuation/infra/: exception.py  (+1 more)
wandb/: latest-run
(+251 files in other folders)
